2007-07-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-msn.glade:
	* libempathy-gtk/empathy-account-widget-msn.c:
	* libempathy-gtk/empathy-account-widget-msn.h:
	* libempathy-gtk/empathy-accounts-dialog.c:
	* libempathy-gtk/Makefile.am: Add MSN setting UI. Fixes bug #443162
	(Cosimo Cecchi).

	* libempathy-gtk/empathy-chat-view.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h: Add needed API to show chat logs in
	Tracker. Fixes bug #452536.

2007-07-07 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c: Workaround to fix a 
	commonly reported crash. Fixes bug #454277
	* libempathy/empathy-tp-group.c: Add a missing check.

2007-06-30 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump MC version required to 4.27.
	* TODO: Updated.

2007-06-30 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c: Fix a leaked ref.

	* src/empathy.c: If we get a chatroom we have to create an
	EmpathyTpChatroom object.

	* src/Makefile.am: Fix build system, programs links to libempathy-gtk
	and libempathy.

	* configure.ac: libempathy does not depends on libgnome-vfs.

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/empathy-chat.c:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-tp-chat.h:
	* libempathy/empathy-filter.c:
	* libempathy/empathy-filter.h:
	* libempathy/empathy-filter.xml:
	* libempathy/Makefile.am: Filter incoming text channels and make
	status icon flash when there we receive a new message. Dispatch the
	channel only when we get a message and the user click on the icon.

2007-06-22 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/libempathy-gtk.pc.in:
	* libempathy-gtk/Makefile.am:
	* libempathy/libempathy.pc.in:
	* libempathy/Makefile.am:
	* configure.ac: Install libempathy and libempathy-gtk and make their
	API public.

2007-06-22 Xavier Claessens  <xclaesse@gmail.com>
