@@ -167,6 +167,8 @@ main (int argc, char *argv[])
 		{ NULL }
 	};
 
+	empathy_debug_set_log_file_from_env ();
+
 	bindtextdomain (GETTEXT_PACKAGE, LOCALEDIR);
 	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
 	textdomain (GETTEXT_PACKAGE);
